--- a/requirements.txt
+++ b/requirements.txt
@@ -11,5 +11,7 @@ Jinja2==3.1.4
 MarkupSafe==3.0.1
 packaging==24.1
 requests==2.32.3
-urllib3==2.2.3
+urllib3==1.26.7  # Corrected version
 Werkzeug==3.0.4
+azure-cognitiveservices-speech==1.19.0  # Added Azure Cognitive Services Speech SDK
+python-dotenv==0.19.2  # Optional for easier local development
