--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -50,7 +50,7 @@ stages:
               appName: 'yonchee'
               runtimeStack: 'PYTHON|3.10'
               package: '$(Build.SourcesDirectory)'
-              startUpCommand: 'gunicorn --workers 4 --bind 0.0.0.0:8000 app:app'
+              startUpCommand: 'waitress-serve --port=8000 app:app'
 
 # - stage: DeployToProd
 #   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
