--- a/requirements.txt
+++ b/requirements.txt
@@ -15,3 +15,4 @@ urllib3==1.26.15  # Corrected version
 Werkzeug==3.0.4
 azure-cognitiveservices-speech==1.30.0  # Added Azure Cognitive Services Speech SDK
 python-dotenv==0.19.2  # Optional for easier local development
+waitress==2.1.2  # Added Waitress WSGI server
