add dependencies to deploy stage

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -43,6 +43,16 @@ stages:
       runOnce:
         deploy:
           steps:
+          - task: UsePythonVersion@0
+            inputs:
+              versionSpec: '3.10'
+              addToPath: true
+
+          - script: |
+              python -m pip install --upgrade pip
+              pip install -r requirements.txt
+            displayName: 'Install dependencies'
+            
           - task: AzureWebApp@1
             inputs:
               azureSubscription: 'yonchee-service-connection'
