--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,7 +52,8 @@ stages:
               python -m pip install --upgrade pip
               pip install -r requirements.txt
             displayName: 'Install dependencies'
-            
+            workingDirectory: '$(Build.SourcesDirectory)'
+
           - task: AzureWebApp@1
             inputs:
               azureSubscription: 'yonchee-service-connection'
