--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,6 +15,7 @@ stages:
   jobs:
   - job: BuildJob
     steps:
+      
     - task: UsePythonVersion@0
       inputs:
         versionSpec: '3.10'
@@ -24,15 +25,22 @@ stages:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
       displayName: 'Install dependencies'
-    # - script: |
-    #     echo "Using OCR API Key: $(OCR_API_KEY)"
-    #     echo "Using Azure Speech Key: $(AZURE_SPEECH_KEY)"
-    #     echo "Deploying to region: $(AZURE_SERVICE_REGION)"
-    #   displayName: 'Display Variables'
 
-    # - script: |
-    #     echo "Build completed"
-    #   displayName: 'Build'
+    - script: |
+        echo "Using OCR API Key: $(OCR_API_KEY)"
+        echo "Using Azure Speech Key: $(AZURE_SPEECH_KEY)"
+        echo "Deploying to region: $(AZURE_SERVICE_REGION)"
+      displayName: 'Display Variables'
+
+    - script: |
+        echo "Build completed"
+      displayName: 'Build'
+
+    - task: PublishPipelineArtifact@1
+      inputs:
+        targetPath: '$(Build.SourcesDirectory)/requirements.txt'
+        artifact: 'requirements'
+      displayName: 'Publish requirements.txt as artifact'
 
 - stage: DeployToDev
   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/dev'))
@@ -43,6 +51,11 @@ stages:
       runOnce:
         deploy:
           steps:
+
+          - download: current
+            artifact: requirements
+            displayName: 'Download requirements.txt artifact' 
+
           - task: UsePythonVersion@0
             inputs:
               versionSpec: '3.10'
@@ -62,21 +75,3 @@ stages:
               runtimeStack: 'PYTHON|3.10'
               package: '$(System.DefaultWorkingDirectory)'
               startUpCommand: 'waitress-serve --port=8000 app:app'
-
-# - stage: DeployToProd
-#   condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
-#   jobs:
-#   - deployment: DeploymentJob
-#     environment: 'yourAzureProdWebAppEnvironment'
-#     strategy:
-#       runOnce:
-#         deploy:
-#           steps:
-#           - task: AzureWebApp@1
-#             inputs:
-#               azureSubscription: 'YourServiceConnectionName'
-#               appType: 'webAppLinux'
-#               appName: 'YourProdWebAppName'
-#               runtimeStack: 'PYTHON|3.8'
-#               package: '$(Build.SourcesDirectory)'
-#               startUpCommand: 'gunicorn --workers 4 --bind 0.0.0.0:8000 app:app'
