--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,83 +4,82 @@ trigger:
       - dev
       - main
 
-# pr:
-#   branches:
-#     include:
-#       - dev
+stages:
+- stage: Build
+  displayName: 'Build Stage'
+  jobs:
+  - job: BuildJob
+    displayName: 'Build Job'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+      - task: UsePythonVersion@0
+        inputs:
+          versionSpec: '3.10'
+          addToPath: true
 
-jobs:
-- job: Build
-  displayName: 'Build job'
-  pool:
-    vmImage: 'ubuntu-latest'
-  steps:
-    - task: UsePythonVersion@0
-      inputs:
-        versionSpec: '3.10'
-        addToPath: true
+      - script: |
+          echo "Using OCR API Key: $(OCR_API_KEY)"
+          echo "Using Azure Speech Key: $(AZURE_SPEECH_KEY)"
+          echo "Deploying to region: $(AZURE_SERVICE_REGION)"
+        displayName: 'Display Variables'  
 
-    - script: |
-        echo "Using OCR API Key: $(OCR_API_KEY)"
-        echo "Using Azure Speech Key: $(AZURE_SPEECH_KEY)"
-        echo "Deploying to region: $(AZURE_SERVICE_REGION)"
-      displayName: 'Display Variables'  
+      - script: |
+          python -m venv venv
+          source venv/bin/activate
+          pip install -r requirements.txt
+        displayName: 'Create virtual environment and install dependencies'
 
-    - script: |
-        python -m venv venv
-        source venv/bin/activate
-        pip install -r requirements.txt
-      displayName: 'Create virtual environment and install dependencies'
+      # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
-    # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
+      - task: ArchiveFiles@2
+        inputs:
+          rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
+          includeRootFolder: false
+          archiveType: 'zip'
+          archiveFile: '$(Build.ArtifactStagingDirectory)/release.zip'
+          replaceExistingArchive: true
 
-    - task: ArchiveFiles@2
-      inputs:
-        rootFolderOrFile: '$(System.DefaultWorkingDirectory)'
-        includeRootFolder: false
-        archiveType: 'zip'
-        archiveFile: '$(Build.ArtifactStagingDirectory)/release.zip'
-        replaceExistingArchive: true
+      - publish: $(Build.ArtifactStagingDirectory)/release.zip
+        displayName: 'Publish Artifact'
+        artifact: python-app
 
-    - publish: $(Build.ArtifactStagingDirectory)/release.zip
-      displayName: 'Publish Artifact'
-      artifact: python-app
-
-- job: Deploy
-  displayName: 'Deploy job'
+- stage: Deploy
+  displayName: 'Deploy Stage'
   dependsOn: Build
-  pool:
-    vmImage: 'ubuntu-latest'
-  steps:
-    - download: current
-      artifact: python-app
+  jobs:
+  - job: DeployJob
+    displayName: 'Deploy Job'
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+      - download: current
+        artifact: python-app
 
-    - script: unzip -v $(Pipeline.Workspace)/python-app/release.zip
-      displayName: 'Unzip artifact for deployment'
-      timeoutInMinutes: 10  # Increase the timeout if necessary
+      - script: unzip -v $(Pipeline.Workspace)/python-app/release.zip
+        displayName: 'Unzip artifact for deployment'
+        timeoutInMinutes: 10  # Increase the timeout if necessary
 
-    - script: |
-        az webapp config appsettings delete --name yonchee --resource-group yonchee_rg --setting-names WEBSITE_RUN_FROM_PACKAGE
-      displayName: 'Remove WEBSITE_RUN_FROM_PACKAGE setting'
-
-    - task: AzureCLI@2
-      inputs:
-        azureSubscription: 'yonchee-service-connection'
-        scriptType: 'bash'
-        scriptLocation: 'inlineScript'
-        inlineScript: |
-          # Remove WEBSITE_RUN_FROM_PACKAGE setting
-          az webapp config appsettings delete \
-            --name yonchee \
-            --resource-group yonchee_rg \
-            --setting-names WEBSITE_RUN_FROM_PACKAGE
+      - task: AzureCLI@2
+        inputs:
+          azureSubscription: 'yonchee-service-connection'
+          scriptType: 'bash'
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            # Remove WEBSITE_RUN_FROM_PACKAGE setting
+            az webapp config appsettings delete \
+              --name yonchee \
+              --resource-group yonchee_rg \
+              --setting-names WEBSITE_RUN_FROM_PACKAGE
             
-          # Deploy the application using the new recommended command         
-          az webapp deploy \
-            --resource-group yonchee_rg \
-            --name yonchee \
-            --src-path $(Pipeline.Workspace)/python-app/release.zip \
-            --type zip
+            # Deploy the application using the new recommended command         
+            az webapp deploy \
+              --resource-group yonchee_rg \
+              --name yonchee \
+              --src-path $(Pipeline.Workspace)/python-app/release.zip \
+              --type zip
+
+    # Uncomment the below task if you want to use AzureWebApp@1 task instead
     # - task: AzureWebApp@1
     #   inputs:
     #     azureSubscription: 'yonchee-service-connection'
