--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -63,55 +63,55 @@ stages:
         displayName: 'Unzip artifact for deployment'
         timeoutInMinutes: 10  # Increase the timeout if necessary
 
-      - task: AzurePowerShell@5
+      # - task: AzurePowerShell@5
+      #   inputs:
+      #     azureSubscription: 'yonchee-service-connection'
+      #     ScriptType: 'InlineScript'
+      #     InlineScript: |
+
+      #       # Fetch the current app settings
+      #       $appSettings = az webapp config appsettings list --name yonchee --resource-group yonchee_rg | ConvertFrom-Json
+
+      #       # Check if WEBSITE_RUN_FROM_PACKAGE is set and equal to 1
+      #       $runFromPackage = $appSettings | Where-Object { $_.name -eq "WEBSITE_RUN_FROM_PACKAGE" } | Select-Object -ExpandProperty value
+
+      #       if ($runFromPackage -eq "1") {
+      #         Write-Host "WEBSITE_RUN_FROM_PACKAGE is set. Deleting setting..."
+      #         # Delete the WEBSITE_RUN_FROM_PACKAGE setting
+      #         az webapp config appsettings delete --name yonchee --resource-group yonchee_rg --setting-names WEBSITE_RUN_FROM_PACKAGE
+      #       }
+      #       else {
+      #         Write-Host "WEBSITE_RUN_FROM_PACKAGE is not set or not '1'. No action needed."
+      #       }
+
+      #       # Set new environment variables
+      #       Write-Host "Setting new environment variables..."
+      #       az webapp config appsettings set --name yonchee --resource-group yonchee_rg --settings `
+      #         OCR_API_KEY=$(OCR_API_KEY) `
+      #         AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) `
+      #         AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)
+      #     azurePowerShellVersion: 'LatestVersion'
+        
+      - task: AzureCLI@2
         inputs:
           azureSubscription: 'yonchee-service-connection'
-          ScriptType: 'InlineScript'
-          InlineScript: |
-
-            # Fetch the current app settings
-            $appSettings = az webapp config appsettings list --name yonchee --resource-group yonchee_rg | ConvertFrom-Json
-
-            # Check if WEBSITE_RUN_FROM_PACKAGE is set and equal to 1
-            $runFromPackage = $appSettings | Where-Object { $_.name -eq "WEBSITE_RUN_FROM_PACKAGE" } | Select-Object -ExpandProperty value
-
-            if ($runFromPackage -eq "1") {
-              Write-Host "WEBSITE_RUN_FROM_PACKAGE is set. Deleting setting..."
-              # Delete the WEBSITE_RUN_FROM_PACKAGE setting
-              az webapp config appsettings delete --name yonchee --resource-group yonchee_rg --setting-names WEBSITE_RUN_FROM_PACKAGE
-            }
-            else {
-              Write-Host "WEBSITE_RUN_FROM_PACKAGE is not set or not '1'. No action needed."
-            }
-
-            # Set new environment variables
-            Write-Host "Setting new environment variables..."
-            az webapp config appsettings set --name yonchee --resource-group yonchee_rg --settings `
-              OCR_API_KEY=$(OCR_API_KEY) `
-              AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) `
-              AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)
-          azurePowerShellVersion: 'LatestVersion'
-        
-      # - task: AzureCLI@2
-      #   inputs:
-      #     azureSubscription: 'yonchee-service-connection'
-      #     scriptType: 'bash'
-      #     scriptLocation: 'inlineScript'
-      #     inlineScript: |
-      #       az webapp config appsettings delete \
-      #         --name yonchee \
-      #         --resource-group yonchee_rg \
-      #         --setting-names WEBSITE_RUN_FROM_PACKAGE
-      # - task: AzureCLI@2
-      #   inputs:
-      #     azureSubscription: 'yonchee-service-connection'
-      #     scriptType: 'bash'
-      #     scriptLocation: 'inlineScript'
-      #     inlineScript: |
-      #       az webapp config appsettings set \
-      #         --name yonchee \
-      #         --resource-group yonchee_rg \
-      #         --settings OCR_API_KEY=$(OCR_API_KEY) AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)      
+          scriptType: 'bash'
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            az webapp config appsettings delete \
+              --name yonchee \
+              --resource-group yonchee_rg \
+              --setting-names WEBSITE_RUN_FROM_PACKAGE
+      - task: AzureCLI@2
+        inputs:
+          azureSubscription: 'yonchee-service-connection'
+          scriptType: 'bash'
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            az webapp config appsettings set \
+              --name yonchee \
+              --resource-group yonchee_rg \
+              --settings OCR_API_KEY=$(OCR_API_KEY) AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)      
 
       - task: AzureWebApp@1
         inputs:
