--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -22,12 +22,6 @@ stages:
           addToPath: true
 
       - script: |
-          echo "Using OCR API Key: $(OCR_API_KEY)"
-          echo "Using Azure Speech Key: $(AZURE_SPEECH_KEY)"
-          echo "Deploying to region: $(AZURE_SERVICE_REGION)"
-        displayName: 'Display Variables'
-
-      - script: |
           python -m venv venv
           source venv/bin/activate
           pip install -r requirements.txt
@@ -51,8 +45,9 @@ stages:
   displayName: 'Deploy Stage'
   dependsOn: Build
   jobs:
-  - job: DeployJob
-    displayName: 'Deploy Job'
+  - job: DeployStaging
+    displayName: 'Deploy to Staging'
+    condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'dev'))
     pool:
       vmImage: 'ubuntu-latest'
     steps:
@@ -63,35 +58,52 @@ stages:
         displayName: 'Unzip artifact for deployment'
         timeoutInMinutes: 10  # Increase the timeout if necessary
 
-      # - task: AzurePowerShell@5
-      #   inputs:
-      #     azureSubscription: 'yonchee-service-connection'
-      #     ScriptType: 'InlineScript'
-      #     InlineScript: |
+      - task: AzureCLI@2
+        displayName: Delete WEBSITE_RUN_FROM_PACKAGE
+        inputs:
+          azureSubscription: 'yonchee-service-connection'
+          scriptType: 'bash'
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            az webapp config appsettings delete \
+              --name yonchee-staging \
+              --resource-group yonchee_rg \
+              --setting-names WEBSITE_RUN_FROM_PACKAGE
 
-      #       # Fetch the current app settings
-      #       $appSettings = az webapp config appsettings list --name yonchee --resource-group yonchee_rg | ConvertFrom-Json
+      - task: AzureCLI@2
+        displayName: Configurating variables
+        inputs:
+          azureSubscription: 'yonchee-service-connection'
+          scriptType: 'bash'
+          scriptLocation: 'inlineScript'
+          inlineScript: |
+            az webapp config appsettings set \
+              --name yonchee-staging \
+              --resource-group yonchee_rg \
+              --settings OCR_API_KEY=$(OCR_API_KEY) AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)
 
-      #       # Check if WEBSITE_RUN_FROM_PACKAGE is set and equal to 1
-      #       $runFromPackage = $appSettings | Where-Object { $_.name -eq "WEBSITE_RUN_FROM_PACKAGE" } | Select-Object -ExpandProperty value
+      - task: AzureWebApp@1
+        displayName: Deploy Yonchee Staging app
+        inputs:
+          azureSubscription: 'yonchee-service-connection'
+          appName: 'yonchee-staging'
+          package: '$(Pipeline.Workspace)/python-app/release.zip'
+          startupCommand: 'waitress-serve --port=8000 app:app'
+          appType: 'webAppLinux'
 
-      #       if ($runFromPackage -eq "1") {
-      #         Write-Host "WEBSITE_RUN_FROM_PACKAGE is set. Deleting setting..."
-      #         # Delete the WEBSITE_RUN_FROM_PACKAGE setting
-      #         az webapp config appsettings delete --name yonchee --resource-group yonchee_rg --setting-names WEBSITE_RUN_FROM_PACKAGE
-      #       }
-      #       else {
-      #         Write-Host "WEBSITE_RUN_FROM_PACKAGE is not set or not '1'. No action needed."
-      #       }
+  - job: DeployProduction
+    displayName: 'Deploy to Production'
+    condition: and(succeeded(), eq(variables['Build.SourceBranchName'], 'main'))
+    pool:
+      vmImage: 'ubuntu-latest'
+    steps:
+      - download: current
+        artifact: python-app
 
-      #       # Set new environment variables
-      #       Write-Host "Setting new environment variables..."
-      #       az webapp config appsettings set --name yonchee --resource-group yonchee_rg --settings `
-      #         OCR_API_KEY=$(OCR_API_KEY) `
-      #         AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) `
-      #         AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)
-      #     azurePowerShellVersion: 'LatestVersion'
-        
+      - script: unzip -v $(Pipeline.Workspace)/python-app/release.zip
+        displayName: 'Unzip artifact for deployment'
+        timeoutInMinutes: 10  # Increase the timeout if necessary
+
       - task: AzureCLI@2
         displayName: Delete WEBSITE_RUN_FROM_PACKAGE
         inputs:
@@ -114,10 +126,10 @@ stages:
             az webapp config appsettings set \
               --name yonchee \
               --resource-group yonchee_rg \
-              --settings OCR_API_KEY=$(OCR_API_KEY) AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)      
+              --settings OCR_API_KEY=$(OCR_API_KEY) AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)
 
       - task: AzureWebApp@1
-        displayName: Deploy Yonchee app
+        displayName: Deploy Yonchee Production app
         inputs:
           azureSubscription: 'yonchee-service-connection'
           appName: 'yonchee'
