Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -13,8 +13,8 @@ stages:
   jobs:
   - job: BuildJob
     displayName: 'Build Job'
-    pool:
-      vmImage: 'ubuntu-latest'
+    pool: 'yon1'
+      # vmImage: 'ubuntu-latest'
     steps:
       - task: UsePythonVersion@0
         inputs:
