--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -101,7 +101,11 @@ stages:
             az webapp config appsettings set \
               --name yonchee-staging \
               --resource-group yonchee_rg \
-              --settings OCR_API_KEY=$(OCR_API_KEY) AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)
+              --settings OCR_API_KEY=$(OCR_API_KEY) 
+                         AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) \
+                         AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION) \
+                         DOCUMENT_INTELLIGENCE_KEY=$(DOCUMENT_INTELLIGENCE_KEY) \
+                         DOCUMENT_INTELLIGENCE_ENDPOINT=$(DOCUMENT_INTELLIGENCE_ENDPOINT)
 
       - task: AzureWebApp@1
         displayName: 'Deploy Yonchee Staging app'
@@ -172,7 +176,11 @@ stages:
             az webapp config appsettings set \
               --name yonchee \
               --resource-group yonchee_rg \
-              --settings OCR_API_KEY=$(OCR_API_KEY) AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION)
+              --settings OCR_API_KEY=$(OCR_API_KEY) 
+                         AZURE_SPEECH_KEY=$(AZURE_SPEECH_KEY) \
+                         AZURE_SERVICE_REGION=$(AZURE_SERVICE_REGION) \
+                         DOCUMENT_INTELLIGENCE_KEY=$(DOCUMENT_INTELLIGENCE_KEY) \
+                         DOCUMENT_INTELLIGENCE_ENDPOINT=$(DOCUMENT_INTELLIGENCE_ENDPOINT)
 
       - task: AzureWebApp@1
         displayName: 'Deploy Yonchee Production app'
